ui.frontend/src/main/webpack/fe-components/components/fe-header/fe-header.scss
.fepage {
    .minimal-header {
        #efe-global-nav-header .cmp-container--1920.efe-nav-header {
            justify-content: right;
            @media screen and (max-width: 576px) { 
                min-height: rem(34px);
                padding: 35px 30px;
            }
        }
        #efe-global-nav-header {
            display: block;
            * {
                text-align: right;
            }
            @media screen and (min-width: 1290px) {
                display: none;
            }
        }
        .minimal-header__vertical-line {
            display: none;
        }
        #efe-nav-main .cmp-container--26 {
            gap: 17.34px;
            justify-content: normal;
            @media screen and (max-width: 576px) {
                padding-top: 0 !important;
                padding-bottom: 30px !important;
            }
        }
        .minimal-header__vertical-line {
            border-left: 1px solid #949494;
            display: block;
            height: 42px;
        }
        #efe-nav-main #nav-list-cta-group #efe-global-nav-header {
            display: none;
        }
        #efe-nav-main #nav-list-cta-group .cmp-button--button-primary {
            display: block;
        }
        #efe-nav-main #nav-list-cta-group {
            width: auto;
            margin-left: auto;
        }
        #efe-global-nav-header ,  #efe-nav-main #nav-list-cta-group {
            align-self: baseline;
            .cmp-text {
                p, span {
                    @include footer-02;
                    color: var(--535658, #535658);
                    text-align: right;
                    font-size: 16px;
                    font-style: normal;
                    font-weight: 400;
                    line-height: normal;
                    &.supportPhoneText {
                        font-size: 16px;
                    }
                }
            }
        }
        @media screen and (min-width: 1290px) {
            #efe-nav-main .cmp-container--26 {
                padding: 18px 24px !important;
            }
        }
        .cmp-image--efe-logo-secondary, .cmp-image--efe-logo-primary {
            &.cmp-image--small {
                width: 218px;
                height: 45px;
                padding-bottom: 40px;
                @media screen and (min-width: 1290px) {
                    .cmp-image__image {
                        width: 218px;
                        height: 45px;
                        object-fit: contain;
                    }
                }
                @media screen and (max-width: 576px) { 
                    padding-bottom: 0;
                    align-self: end;
                    .cmp-image__image {
                        height: 42px;
                    }
                }
            }
        }
        * {
            font-family: var( --fe-footer-header-font-family) !important;
        }
    }
    &.theme-vanguard, &.theme-aon, &.theme-ssga {
        .minimal-header {
            #efe-nav-main .cmp-container--26 {
                gap: 31.32px;
            }
            * {
                font-family: var(--font-family) !important;
            }
            #efe-global-nav-header ,  #efe-nav-main #nav-list-cta-group {
                align-self: baseline;
                .cmp-text {
                    p, span {
                        font-size: 14px;
                        font-weight: 300;
                    }
                }
            }
        }
    }
    &.theme-ssga {
        .minimal-header .minimal-header__vertical-line {
            visibility: hidden;
        }
    }
    &.fe-direct-sponsor {
        .minimal-header {
            .cmp-image--efe-logo-secondary {
                .cmp-image .cmp-image__image {
                    width: max-content;
                }
            }
        }
    }
} 

